<resources>
    <string name="app_name" translatable="false">iPlay</string>
    <string name="menu_search">搜索</string>
    <string name="menu_star">收藏</string>
    <string name="menu_home">主页</string>
    <string name="menu_message">消息</string>
    <string name="menu_setting">设置</string>
    <string name="username">用户名</string>
    <string name="password">密　码</string>
    <string name="server">服务器</string>
    <string name="remark">备　注</string>
    <string name="login">登　录</string>
    <string name="setting_item_theme">主题配置</string>
    <string name="setting_item_site">站点配置</string>
    <string name="setting_item_picture">图片配置</string>
    <string name="setting_item_video">视频配置</string>
    <string name="setting_item_audio">音频配置</string>
    <string name="setting_item_cloud">云同步</string>
    <string name="setting_item_cache">应用缓存</string>
    <string name="setting_item_about">关于</string>
    <string name="not_implementation">功能暂未开放</string>
    <string name="version">v0.0.1</string>
    <string name="app_description">一个跨平台的视频播放器</string>
    <string name="app_note">🥳 需要新功能就去加个🌟吧</string>
    <string name="page_about">关于</string>
    <string name="season_title">季</string>
    <string name="actor_title">演职人员</string>
    <string name="episode_title">集标题</string>
    <string name="episode_overview">这一集，某天，某处，发生了什么</string>
    <string name="login_ing">登录中...</string>
    <string name="search_hint">输入搜索关键字</string>
    <string name="sync_webdav">WebDav同步</string>
    <string name="to_webdav">上传到云</string>
    <string name="from_webdav">从云下载</string>
    <string name="webdav_server_hint">https://dav.example.com</string>
    <string name="webdav_username_hint">guest</string>
    <string name="webdav_password_hint">password</string>
    <string name="emby_password_hint">password</string>
    <string name="emby_server_hint">http://media.example.com:8096/</string>
    <string name="emby_username_hint">guest</string>
    <string name="emby_remark_hint">🌸测试</string>
    <string name="page_cloud">云同步</string>
    <string name="webdav_sync_failed">😓同步失败，检查webdav配置</string>
    <string name="webdav_sync_success">🎉 同步成功</string>
    <string name="theme_page">主题配置</string>
    <string name="theme_appearance">主题样式</string>
    <string name="theme_follow_system">跟随系统</string>
    <string name="theme_dark_mode">深色模式</string>
    <string name="theme_light_mode">浅色模式</string>
    <string name="video_decode_auto">自动</string>
    <string name="video_decode_hw">硬解</string>
    <string name="video_decode_sw">软解</string>
    <string name="video_decode">视频解码模式</string>
    <string name="video_player_fullscreen">直接全屏播放</string>
    <string name="audio_turn_off">禁用音频</string>
    <string name="view_mode">查看更多</string>
    <string name="watch_button">立刻观看</string>
    <string name="close">关闭</string>
    <string name="star_type_unknown">其他类型</string>
    <string name="star_type_episode">喜爱的集</string>
    <string name="star_type_series">喜爱的剧</string>
    <string name="start_type_movie">喜爱的电影</string>
    <string name="continue_watch">继续观看</string>
    <string name="export_log">导出日志文件到下载目录</string>
    <string name="export_log_success">成功导出日志到目录</string>
    <string name="export_log_failed">遇到一些问题，日志无法成功导出到</string>
    <string name="export_log_test">错误日志导出</string>
    <string name="unhandled_exception">程序崩溃，即将退出</string>
    <string name="page_test">测试</string>
    <string name="video_use_strm_first">优先使用STRM文件</string>
    <string name="delete">删除</string>
    <string name="modify">修改</string>
    <string name="can_remove_current_site">无法删除使用中的站点</string>
    <string name="modify_at_site_page">请在站点配置页修改</string>
    <string name="app_note_html"><![CDATA[<a href=\"https://github.com/ourfor/iPlay\">🥳 需要新功能就去加个🌟吧</a>]]></string>
    <string name="webdav_sync_tutorial">☁️通过WebDAV同步你的Emby站点</string>
    <string name="webdav_sync_tutorial_html"><![CDATA[<a href=\"https://www.ourfor.top/article/iplay-webdav-sync/\">☁️ 通过WebDAV同步你的Emby站点</a>]]></string>
    <string name="menu_unknown">未知</string>
    <string name="autoupgrade_turn_off">关闭更新检查</string>
    <string name="picture_quality">图片质量</string>
    <string name="pic_quality_auto">自动</string>
    <string name="pic_quality_high">高</string>
    <string name="pic_quality_medium">中</string>
    <string name="pic_quality_low">低</string>
    <string name="sync_local_file">站点数据本地备份还原</string>
    <string name="to_local">备份</string>
    <string name="from_local">还原</string>
    <string name="local_sync_success">本地同步成功</string>
    <string name="picture_use_multi_thread">使用多线程加载图片</string>
    <string name="mpv_conf">mpv高级配置(每行一个,格式: key=value)</string>
    <string name="save">保存</string>
    <string name="file">文件</string>
    <string name="sort_by_name">名称排序</string>
    <string name="sort_by_date_add">加入时间排序</string>
    <string name="sort_by_date_release">发行时间排序</string>
    <string name="refresh">刷新</string>
    <string name="check_update">检查更新</string>
    <string name="add_site">添加</string>
    <string name="emby">Emby</string>
    <string name="jellyfin">Jellyfin</string>
    <string name="alist">Alist</string>
    <string name="iptv">IPTV</string>
    <string name="webdav">WebDav</string>
    <string name="onedrive">OneDrive</string>
    <string name="plex">Plex</string>
    <string name="site_allow_sync">允许同步站点</string>
    <string name="site_show_sensitive">显示敏感信息</string>
    <string name="theme_font">界面字体</string>
    <string name="sync_onedrive_title">备份到OneDrive</string>
    <string name="login_onedrive">登录</string>
    <string name="sync_onedrive_switch">切换账号</string>
    <string name="menu_file">文件</string>
    <string name="login_onedrive_tip">登录OneDrive</string>
    <string name="switch_drive">切换网盘</string>
    <string name="add_drive">添加网盘</string>
    <string name="cloud189">189</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="can_remove_current_drive">无法移除使用中的网盘</string>
    <string name="theme_color_scheme">颜色风格</string>
    <string name="theme_color_gradient">渐变</string>
    <string name="theme_color_pure">纯色</string>
    <string name="sync_cloud">通过添加的云盘同步</string>
    <string name="turn_on">启用</string>
    <string name="turn_off">关闭</string>
    <string name="cancel">取消</string>
    <string name="use_exo_player">使用Exo播放器</string>
    <string name="switch_site">切换站点</string>
    <string name="theme_layout_mode">界面布局</string>
    <string name="layout_type_phone">手机</string>
    <string name="layout_type_tv">电视</string>
    <string name="line_manage">线路</string>
    <string name="menu_suggestion">建议</string>
    <string name="loading">加载中</string>
    <string name="movie_post">电影海报</string>
    <string name="similar_title">类似的影片</string>
    <string name="web_homepage">Web主页地址</string>
    <string name="inject_js">注入JS代码</string>
    <string name="play">播放</string>
    <string name="video_source">视频源</string>
    <string name="audio_source">音频源</string>
    <string name="subtitle_source">字幕源</string>
    <string name="subtitle_delay">调整字幕延时</string>
    <string name="subtitle_position">字幕显示位置偏移</string>
    <string name="advance_config_warning">对于部分播放器实现，某些配置可能无效</string>
    <string name="select_player_kernel">播放器实现</string>
    <string name="player_vlc">VLC</string>
    <string name="player_mpv">MPV</string>
    <string name="player_exo">EXO</string>
    <string name="exit_after_crash">遇到未处理异常，退出应用</string>
    <string name="auto_play_next_episode">自动播放下一集(如果有)</string>
    <string name="app_logo">App Logo</string>
    <string name="local_file">本地文件</string>
    <string name="add_folder">添加目录</string>
    <string name="add_folder_success">目录添加成功</string>
    <string name="iplay">iPlay</string>
    <string name="home_allow_tabs">主页菜单项目，长按菜单打开设置</string>
    <string name="home_allow_tabs_modify">修改配置</string>
</resources>