<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item android:id="@+id/refresh"
        android:title="@string/refresh"
        android:icon="@drawable/arrow_clockwise"
        app:showAsAction="never"
        />
    <item android:id="@+id/sort_by_name"
        android:title="@string/sort_by_name"
        android:icon="@drawable/waveform"
        app:showAsAction="never"
        />
    <item android:id="@+id/sort_by_date_add"
        android:title="@string/sort_by_date_add"
        android:icon="@drawable/waveform"
        app:showAsAction="never"
        />
    <item android:id="@+id/sort_by_date_release"
        android:iconTint="@color/primary"
        android:title="@string/sort_by_date_release"
        android:icon="@drawable/waveform"
        app:showAsAction="never"
        />
</menu>