<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/server_type_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:justifyContent="center"
        app:alignItems="center"
        app:flexWrap="wrap"
        app:layout_constraintTop_toTopOf="parent"
        />
    <top.ourfor.app.iplayx.view.infra.TextView
        android:id="@+id/remark_label"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/remark"
        android:textSize="18dp"
        android:textColor="@color/onBackground"
        app:layout_constraintWidth_min="55dp"
        app:layout_constraintTop_toBottomOf="@id/server_type_container"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp" />
    <top.ourfor.app.iplayx.view.infra.EditText
        android:id="@+id/remark_input"
        android:layout_width="0dp"
        android:layout_height="36dp"
        app:layout_constraintTop_toTopOf="@id/remark_label"
        app:layout_constraintLeft_toRightOf="@id/remark_label"
        app:layout_constraintBottom_toBottomOf="@id/remark_label"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/input_border"
        android:textColor="@color/onSecondaryContainer"
        android:textColorHint="@color/secondary"
        android:textSize="20dp"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:hint="@string/emby_remark_hint"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <top.ourfor.app.iplayx.view.infra.TextView
        android:id="@+id/server_label"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/server"
        android:textSize="18dp"
        android:textColor="@color/onBackground"
        app:layout_constraintWidth_min="55dp"
        app:layout_constraintTop_toBottomOf="@id/remark_label"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp" />
    <top.ourfor.app.iplayx.view.infra.EditText
        android:id="@+id/server_input"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:textColor="@color/onSecondaryContainer"
        app:layout_constraintTop_toTopOf="@id/server_label"
        app:layout_constraintLeft_toRightOf="@id/server_label"
        app:layout_constraintBottom_toBottomOf="@id/server_label"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/input_border"
        android:textColorHint="@color/secondary"
        android:hint="@string/emby_server_hint"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="18dp"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <top.ourfor.app.iplayx.view.infra.TextView
        android:id="@+id/username_label"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/username"
        android:textSize="18dp"
        android:textColor="@color/onBackground"
        app:layout_constraintWidth_min="55dp"
        app:layout_constraintTop_toBottomOf="@id/server_label"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp" />

    <top.ourfor.app.iplayx.view.infra.EditText
        android:id="@+id/username_input"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/input_border"
        android:textColor="@color/onSecondaryContainer"
        android:textSize="18dp"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:hint="@string/emby_username_hint"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColorHint="@color/secondary"
        app:layout_constraintBottom_toBottomOf="@id/username_label"
        app:layout_constraintLeft_toRightOf="@id/username_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/username_label" />

    <top.ourfor.app.iplayx.view.infra.TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/password"
        android:textSize="18dp"
        android:textColor="@color/onBackground"
        app:layout_constraintWidth_min="55dp"
        app:layout_constraintTop_toBottomOf="@id/username_label"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp" />

    <top.ourfor.app.iplayx.view.infra.EditText
        android:id="@+id/password_input"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/input_border"
        android:textColor="@color/onBackground"
        android:textSize="18dp"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:hint="@string/emby_password_hint"
        android:textColorHint="@color/secondary"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@id/password_label"
        app:layout_constraintLeft_toRightOf="@id/password_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/password_label" />

    <top.ourfor.app.iplayx.view.infra.TextView
        android:id="@+id/allow_sync_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/site_allow_sync"
        android:textColor="@color/onBackground"
        android:layout_marginLeft="15dp"
        app:layout_constraintTop_toTopOf="@id/allow_sync_switch"
        app:layout_constraintBottom_toBottomOf="@id/allow_sync_switch"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Switch
        android:id="@+id/allow_sync_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password_input"
        app:layout_constraintLeft_toRightOf="@id/allow_sync_label"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:track="@drawable/selector_track"
        android:thumb="@drawable/selector_thumb"
        />

    <top.ourfor.app.iplayx.view.infra.TextView
        android:id="@+id/show_sensitive_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/onBackground"
        android:text="@string/site_show_sensitive"
        android:layout_marginRight="5dp"
        app:layout_constraintTop_toTopOf="@id/show_sensitive_switch"
        app:layout_constraintBottom_toBottomOf="@id/show_sensitive_switch"
        app:layout_constraintRight_toLeftOf="@id/show_sensitive_switch"
        />

    <Switch
        android:id="@+id/show_sensitive_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/allow_sync_switch"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="5dp"
        android:track="@drawable/selector_track"
        android:thumb="@drawable/selector_thumb"
        />

    <top.ourfor.app.iplayx.view.infra.Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="16sp"
        android:background="@drawable/button_state"
        android:backgroundTint="@color/onBackground_mediumContrast"
        android:textColor="@color/onPrimary"
        app:layout_constraintTop_toBottomOf="@id/allow_sync_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
