<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/list_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHeight_max="400dp"
        />
    <top.ourfor.app.iplay.view.infra.TextView
    android:id="@+id/remark_label"
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:text="@string/remark"
    android:textSize="18dp"
    android:textColor="@color/onBackground"
    app:layout_constraintWidth_min="55dp"
    app:layout_constraintTop_toBottomOf="@id/list_container"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp" />
    <top.ourfor.app.iplay.view.infra.EditText
        android:id="@+id/remark_input"
        android:layout_width="0dp"
        android:layout_height="36dp"
        app:layout_constraintTop_toTopOf="@id/remark_label"
        app:layout_constraintLeft_toRightOf="@id/remark_label"
        app:layout_constraintBottom_toBottomOf="@id/remark_label"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/input_border"
        android:textColor="@color/onSecondaryContainer"
        android:textColorHint="@color/secondary"
        android:textSize="20dp"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:hint="@string/emby_remark_hint"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <top.ourfor.app.iplay.view.infra.TextView
        android:id="@+id/server_label"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/server"
        android:textSize="18dp"
        android:textColor="@color/onBackground"
        app:layout_constraintWidth_min="55dp"
        app:layout_constraintTop_toBottomOf="@id/remark_label"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp" />
    <top.ourfor.app.iplay.view.infra.EditText
        android:id="@+id/server_input"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:textColor="@color/onSecondaryContainer"
        app:layout_constraintTop_toTopOf="@id/server_label"
        app:layout_constraintLeft_toRightOf="@id/server_label"
        app:layout_constraintBottom_toBottomOf="@id/server_label"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/input_border"
        android:textColorHint="@color/secondary"
        android:hint="@string/emby_server_hint"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="18dp"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <Button
        android:id="@+id/add_line_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_site"
        android:textSize="16dp"
        android:background="@drawable/button_state"
        android:textColor="@color/onPrimary"
        app:layout_constraintTop_toBottomOf="@id/server_input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
