<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/webdav_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:textSize="18sp"
        android:text="@string/sync_cloud"
        android:gravity="center"
        />
    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/control_bar"
        app:layout_constraintTop_toBottomOf="@id/webdav_title"
        app:justifyContent="center"
        app:alignItems="center"
        >
        <Button
            android:id="@+id/to_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_local"
            android:textSize="16dp"
            android:background="@drawable/button_state"
            android:textColor="@color/onPrimary"
            app:layout_constraintTop_toBottomOf="@id/password_input"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            />
        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_onedrive"
            android:textSize="16dp"
            android:background="@drawable/button_state"
            android:textColor="@color/onPrimary"
            app:layout_constraintTop_toBottomOf="@id/password_input"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            />
        <Spinner
            android:id="@+id/drive_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />
        <Button
            android:id="@+id/from_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_local"
            android:textSize="16dp"
            android:background="@drawable/button_state"
            android:textColor="@color/onPrimary"
            app:layout_constraintTop_toBottomOf="@id/password_input"
            app:layout_constraintLeft_toRightOf="@id/to_button"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            />
    </com.google.android.flexbox.FlexboxLayout>

    <TextView
        android:id="@+id/sync_tutorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/webdav_sync_tutorial"
        android:textSize="18dp"
        android:textColor="@color/secondary"
        app:layout_constraintTop_toBottomOf="@id/control_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/local_backup_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sync_tutorial"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:gravity="center"
        android:text="@string/sync_local_file"
        />
    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/local_control_bar"
        app:layout_constraintTop_toBottomOf="@id/local_backup_title"
        app:justifyContent="center"
        >
        <Button
            android:id="@+id/to_local_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_local"
            android:textSize="16dp"
            android:background="@drawable/button_state"
            android:textColor="@color/onPrimary"
            app:layout_constraintTop_toBottomOf="@id/password_input"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            />
        <Button
            android:id="@+id/from_local_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_local"
            android:textSize="16dp"
            android:background="@drawable/button_state"
            android:textColor="@color/onPrimary"
            app:layout_constraintTop_toBottomOf="@id/password_input"
            app:layout_constraintLeft_toRightOf="@id/to_button"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            />
    </com.google.android.flexbox.FlexboxLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
