<?xml version="1.0" encoding="utf-8"?>
<top.ourfor.app.iplayx.view.LifecycleHolder
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.flexbox.FlexboxLayout
        app:flexDirection="column"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <com.google.android.flexbox.FlexboxLayout
        app:alignItems="center"
        app:justifyContent="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <top.ourfor.app.iplayx.view.infra.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sub_pos_label"
            android:text="@string/subtitle_position"
            android:textSize="18sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/onBackground"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            app:layout_flexGrow="1"
            />
        <top.ourfor.app.iplayx.view.infra.EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="number"
            android:id="@+id/sub_pos"
            app:layout_minWidth="50dp"
            android:layout_marginEnd="10dp"
            />
    </com.google.android.flexbox.FlexboxLayout>
    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.flexbox.FlexboxLayout
            app:alignItems="center"
            app:justifyContent="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <top.ourfor.app.iplayx.view.infra.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/name_label"
                android:text="@string/subtitle_delay"
                android:textSize="18sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/onBackground"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp"
                app:layout_flexGrow="1"
                />
            <top.ourfor.app.iplayx.view.infra.EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="number"
                android:id="@+id/sub_delay"
                app:layout_minWidth="50dp"
                android:layout_marginEnd="10dp"
                />
        </com.google.android.flexbox.FlexboxLayout>
    </com.google.android.flexbox.FlexboxLayout>
        <com.google.android.flexbox.FlexboxLayout
            app:alignItems="center"
            app:justifyContent="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <top.ourfor.app.iplayx.view.infra.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/warning_label"
                android:text="@string/advance_config_warning"
                />
        </com.google.android.flexbox.FlexboxLayout>
    </com.google.android.flexbox.FlexboxLayout>
</top.ourfor.app.iplayx.view.LifecycleHolder>